--- a/assets/scss/main-rtl.scss
+++ b/assets/scss/main-rtl.scss
@@ -213,7 +213,7 @@
   }
 }
 
-.card-item {
+.jbs-card-item {
   width: 16.66666% !important;
 }
 
